[tool.poetry]
name = "oobabot"
version = "0.1.3"
description = "A Discord bot which talks to Large Language Model AIs running on oobabooga's text-generation-webui"
authors = ["Christopher Rude <chris@rudesoftware.net>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/chrisrude/oobabot"

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^2.2.2"
pysbd = "^0.3.4"
websockets = "^11"

[tool.poetry.scripts]
oobabot = 'oobabot.oobabot:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flakeheaven]
format = "grouped"
max-line-length = 88
show_source = true

[tool.flakeheaven.exceptions]
pycodestyle = ["-E203", "-W503", "-W504"]

[tool.poetry.group.test.dependencies]
pytest = "^7.1"
black = "^23.1.0"
isort = "^5.12.0"
pre-commit = "^3.1.1"

[tool.isort]
profile = "black"
force_single_line = true
force_sort_within_sections = true
single_line_exclusions = ["typing", "typing_extensions"]
