[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

# build gotchas:
# you need a conda env
# you need to install maturin via pip
# you need to install cmake
# you need to install rust
# you need to install libclang-dev

[project]
name = "oobabot"
version = "0.2.0"
description = "A Discord bot which talks to Large Language Model AIs running on oobabooga's text-generation-webui"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
# keywords = ["egg", "bacon", "sausage", "tomatoes", "Lobster Thermidor"]
authors = [{ email = "chris@rudesoftware.net" }, { name = "Christopher Rude" }]
maintainers = [
    { email = "chris@rudesoftware.net" },
    { name = "Christopher Rude" },
]
# classifiers = [
#   "Development Status :: 4 - Beta",
#   "Programming Language :: Python"
# ]
dependencies = [
    "aiohttp>=3.8.4",
    "discord.py>=2.2.2",
    "pysbd>=0.3.4",
    "ruamel-yaml>=0.17.26",
]
#repository = "https://github.com/chrisrude/oobabot"

[project.optional-dependencies]
test = [
    "black>=23.3.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "pre-commit>=3.2.0",
    "pytest>=7.1",
    "pylint>=2.17.4",
]

[project.urls]
homepage = "https://github.com/chrisrude/oobabot"

[project.scripts]
oobabot = 'oobabot.oobabot:main'

[tool.flakeheaven]
format = "grouped"
max-line-length = 88
show_source = true

[tool.flakeheaven.exceptions]
pycodestyle = ["-E203", "-W503", "-W504"]

[tool.isort]
profile = "black"
force_single_line = true
force_sort_within_sections = true
single_line_exclusions = ["typing", "typing_extensions"]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "oobabot.discrivener"
python-source = "src"

[tool.maturin.target.'x86_64-apple-darwin']
macos-deployment-target = "10.9"

[tool.pylint.'MAIN']
py-version = '3.8.1'
j = 8

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 88
disable = "C0116,R0902,R0903,R0912,R0913,R0914,W0511,W0621"
include-naming-hint = true
