[package]
name = "discrivener"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["lib"]

# note: if this fails to build on osx, you might need
# to install cmake
#   brew install cmake
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# helper for async framework
[dependencies.async-trait]
version = "0.1.51"

# ring buffer, used to store audio data
[dependencies.ringbuf]
version = "0.3.2"

[dependencies.serde]
version = "1.0.130"

[dependencies.serde_json]
version = "1.0.66"

[dependencies.serde_with]
version = "3.0.0"
#  Features:
#  + alloc
#  + macros
#  + std
#  - base64
#  - chrono
#  - chrono_0_4
#  - guide
#  - hex
#  - indexmap
#  - indexmap_1
#  - json
#  - time_0_3

# discord api
[dependencies.songbird]
version = "0.3.2"
features = ["driver"]

# async framework
[dependencies.tokio]
version = "1.28.2"
features = ["full", "signal"]

[dependencies.whisper-rs]
version = "0.8.0"
#features = ["cuda"]
path = "../whisper-rs"
# - coreml
# - cuda
# - opencl
# - simd
# - test-with-tiny-model

# command line argument parsing
[dev-dependencies.clap]
version = "4.3.0"
features = ["derive"]

# just for testing
[dev-dependencies.colored]
version = "2.0.0"

[dev-dependencies.discrivener]
path = "./"
