[package]
name = "oobabot"
version = "0.2.0"
edition = "2021"

[lib]
name = "oobabot"
crate-type = ["cdylib"]

# note: if this fails to build on osx, you might need
# to install cmake
#   brew install cmake
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# helper for async framework
[dependencies.async-trait]
version = "0.1.51"

# command line argument parsing
[dependencies.clap]
version = "4.3.0"
features = ["derive"]

# just for etsting
[dependencies.colored]
version = "2.0.0"

[dependencies.pyo3]
version = "0.19.0"
# Features:
# + indoc
# + macros
# + pyo3-macros
# + unindent
# - abi3
# - abi3-py310
# - abi3-py311
# - abi3-py37
# - abi3-py38
# - abi3-py39
# - anyhow
# - auto-initialize
# - chrono
# - experimental-inspect
# - extension-module
# - eyre
# - full
# - generate-import-lib
# - hashbrown
# - indexmap
# - inventory
# - multiple-pymethods
# - nightly
# - num-bigint
# - num-complex
# - rust_decimal
# - serde

# ring buffer, used to store audio data
[dependencies.ringbuf]
version = "0.3.2"

[dependencies.serde]
version = "1.0.130"

[dependencies.serde_json]
version = "1.0.66"

[dependencies.serde_with]
version = "3.0.0"
#  Features:
#  + alloc
#  + macros
#  + std
#  - base64
#  - chrono
#  - chrono_0_4
#  - guide
#  - hex
#  - indexmap
#  - indexmap_1
#  - json
#  - time_0_3

# discord api
[dependencies.songbird]
version = "0.3.2"
features = ["driver"]

# async framework
[dependencies.tokio]
version = "1.28.2"
features = ["full", "signal"]

[dependencies.whisper-rs]
version = "0.8.0"
#features = ["cuda"]
#path = "~/src/ai/whisper-rs"
# - coreml
# - cuda
# - opencl
# - simd
# - test-with-tiny-model
